feat: Add new API controllers and DTOs for product and location management
- Introduced JsonController for converting Java objects to JSON for debugging purposes.
- Created LocationApiController to handle location-related API requests, including provinces, districts, and wards.
- Added ProductApiController for managing product-related API requests.
- Implemented new DTOs: ProductCreateDTO, ProductDashboardDTO, ProductUpdateDTO, RegisterRequestDTO, PermissionDTO, and RoleDTO to support data transfer in the application.
- Removed the outdated LocationController to streamline the codebase.
- Added a new SecurityTag for permission-based access control in JSP pages.
- Implemented RegisterValidator for user registration validation.
- Configured database properties for connection management.
- Added a sample test class for product repository functionality.